log
Sun May  3 09:49:45 PM UTC 2026: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:73:23: error: ‘TreeMap’ has no member named ‘left’
   73 |             aux = tree->left;
      |                       ^~
treemap.c:76:23: error: ‘TreeMap’ has no member named ‘right’
   76 |             aux = tree->right;
      |                       ^~
661ca07
Sun May  3 09:50:13 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/60
4cc062e
